USAGOV-1599-and-USAGOV-1600-Homepage-changes: Fix the title of the all topics to align with the cards

--- a/web/themes/custom/usagov/sass/_homepage.scss
+++ b/web/themes/custom/usagov/sass/_homepage.scss
@@ -371,7 +371,6 @@
 
   .all-topics-header h2 {
     margin: 65px 5vw 0;
-    padding-left: 50px;
   }
 
 }
